<resources>
    <string name="app_name">PFE</string>
    <string name="name">BANK</string>
    <string name="hint_name">If you dont have an account \n  \u0020  \u0020  \u0020  \u0020 \u0020  \u0020  \u0020 \u0020  feel free to </string>
    <string name="createOne">join us</string>
    <string name="CIN">CIN:</string>
    <string name="CINHint">CIN Number</string>
    <string name="login">Login</string>
    <string name="PWD">Password:</string>
    <string name="passwordHint">Password</string>
    <string name="title_activity_register">register</string>
    <string name="username">Username</string>
    <string name="cinsignup">CIN Number</string>
    <string name="phone">Phone number</string>
    <string name="pwd1">Password</string>
    <string name="pwd2">Re-enter your password</string>
    <string name="signup">sign up</string>
    <string name="verify">Verify your number</string>
    <string name="code">Code</string>
    <string name="verifybtn">Verify</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit">Edit</string>
    <string name="modifyaccount">Modify Your Information</string>
    <string name="modifypwd">Modify Your Password</string>
    <string name="submit">Submit</string>
    <string name="currentpwd">Current password</string>
    <string name="newpwd1">New password</string>
    <string name="newpwd2">Re-enter your new password</string>

    <string name="username1">User Name :</string>
    <string name="Cin">CIN Number:</string>
    <string name="Phone">Phone Number :</string>
    <string name="change">Change Password</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Demand2">"DEMANDS"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="projects">Projects</string>
    <string name="projects2">PROJECTS</string>
    <string name="addproject">Add new project</string>
    <string name="projectType">Project type</string>
    <string name="projectname">Project name</string>
    <string name="projectdescription">Project description</string>
    <string name="projectsurface">Project surface</string>
    <string name="pictureDiplome">Select your diploma picture</string>
    <string name="FrontPicLocal">Select your front local picture</string>
    <string name="InsidePicLocal">Select your inside local picture</string>
    <string name="guaranteeType">Guarantee type</string>
    <string name="guaranteedesc">Guarantee description</string>
    <string name="guaranteePic">Guarantee local</string>
    <string name="signaturePic">Set your signature</string>
    <string name="frontCIN">Select your front CIN picture</string>
    <string name="backCIN">Select your back CIN picture</string>
    <string name="setpicture">choose</string>
    <string name="pictureLogo">Select your logo picture</string>
    <string name="EmptySubmit">You did not submit any project</string>
    <string name="EmptyProject">You did not create any project</string>
    <string name="add">Add</string>
    <string name="GeneralInfo">General information</string>
    <string name="LocalInfo">Local information</string>
    <string name="GuaranteeInfo">Guarantee information</string>
    <string name="SignatureSet">Set your signature</string>
    <string name="setLocation">Set your location</string>
    <string name="save">SAVE</string>
    <string name="Describe">Describe your issue or idea here...</string>
    <string name="sendFeed">Send us some feedback!</string>
    <string name="feeddes">Do you have a suggestion or found some bug? Let us know in the field bellow</string>
    <string name="Bug">Bug</string>
    <string name="Comment">Comment</string>
    <string name="Other">Other</string>
    <string name="address">Address:</string>
    <string name="clear">CLEAR</string>
    <string name="SET">SET</string>
    <string name="help">HELP</string>
    <string-array name="projectType">
        <item>Medical Cabinet</item>
        <item>Commercial</item>
        <item>Agriculture</item>
    </string-array>
    <string-array name="testdesc">
        <item>project desc 1</item>
        <item>project desc 2</item>
        <item>project desc 3</item>
        <item>project desc 4</item>
        <item>project desc 5</item>
        <item>project desc 6</item>
        <item>project desc 7</item>
        <item>project desc 8</item>
        <item>project desc 9</item>
        <item>project desc 10</item>
        <item>project desc 11</item>
    </string-array>
</resources>