<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectModifyProject"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas"
        android:text="@string/projects"
        android:textColor="@color/Blue_1"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp"/>
    <Button
        android:id="@+id/btnGeneral"
        android:text="@string/GeneralInfo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/bebas"
        android:textSize="20sp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
    <Button
        android:id="@+id/btnLocal"
        android:text="@string/LocalInfo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/bebas"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
    <Button
        android:id="@+id/btnGuarantee"
        android:text="@string/GuaranteeInfo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/bebas"
        android:textSize="20sp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <Button
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
</androidx.appcompat.widget.LinearLayoutCompat>