<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Help"
    android:background="@color/Gray">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/sanslight"
        android:text="@string/help"
        android:textColor="@color/Blue_1"
        android:textSize="50dp"
 />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@color/Gray"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendFeed"
            android:textColor="@color/Blue_1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:textSize="30dp"
            android:fontFamily="@font/sanslight"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feeddes"
            android:background="@color/float_transparent"
            android:textSize="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/sanslight"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/white"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextView"
            >
            <EditText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:hint="@string/Describe"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:background="@color/white"
                android:fontFamily="@font/sanslight"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/Gray"
        >

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/view_below"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp">

            <RadioButton
                android:id="@+id/Bug"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/Bug"
                android:fontFamily="@font/sanslight"/>

            <RadioButton
                android:id="@+id/Comment"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/Comment"
                android:fontFamily="@font/sanslight"/>

            <RadioButton
                android:id="@+id/Other"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Other"
                android:fontFamily="@font/sanslight"/>
        </RadioGroup>

        <Button
            android:id="@+id/submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/submit"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/sanslight"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>