<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPWD"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg1">
        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/modifyaccount"
            android:textColor="@color/Dark_1"
            android:textSize="50dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/pwd"
            android:gravity="center"
            android:hint="@string/currentpwd"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:singleLine="true"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/CIN"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/pwd"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center"
            android:hint="@string/newpwd1"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:singleLine="true"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/pwd"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center"
            android:hint="@string/newpwd2"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:singleLine="true"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_1"
            android:text="@string/submit" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="209dp"
            android:layout_height="177dp"
            android:translationX="-120dp"
            android:translationY="-50dp"
            app:srcCompat="@drawable/buttonpic" />

</LinearLayout>