<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".OTP">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/verify"
        android:textColor="@color/Dark_1"
        android:textSize="50dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <EditText
        android:id="@+id/OTPcode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/pwd1"
        android:gravity="center"
        android:hint="@string/code"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_gravity="right"
        android:inputType="number"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        />
    <Button
        android:id="@+id/btnVerify"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:layout_marginTop="5dp"
        android:elevation="8dp"
        android:textColor="@color/white"
        android:backgroundTint="#89c5cc"
        android:text="@string/verifybtn" />
</LinearLayout>

