<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignaturePad"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas"
        android:text="@string/SignatureSet"
        android:textColor="@color/Blue_1"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <com.kyanogen.signatureview.SignatureView
        android:id="@+id/Signature"
        xmlns:sign="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        sign:penSize="5dp"
        sign:backgroundColor="#ffffff"
        sign:penColor="#000000"
        sign:enableSignature="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btnGeneral"
            android:text="@string/save"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:textColor="@color/Blue_1"
            android:fontFamily="@font/bebas"
            android:textSize="20sp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />
        <Button
            android:id="@+id/btnLocal"
            android:text="@string/clear"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:textSize="20sp"
            android:textColor="@color/Blue_1"
            android:fontFamily="@font/bebas"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />
</LinearLayout>
</LinearLayout>